# boolean-mutual-information

./: .gitignore  .pre-commit-config.yaml  LICENSE copy  README copy.md  README.md  pyproject.toml  requirements.in  requirements.txt
boolean_mutual_information/: __init__.py  lib.py
docs/: index.html  python_template_repo.html  search.js
notebooks/: example-notebook.ipynb  mutual-info-calc.ipynb
tests/: test_lib.py
