[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "boolean-mutual-information"
authors = [{name = "Kieran Choi-Slattery", email = "kchoislattery@gatech.edu"}]
description = "Probably the worst way to make $100."
version = "0.0.1"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
dependencies = ["numpy",]

[tool.flit.module]
name = "boolean_mutual_information"

[project.urls]
Home = "https://github.com/KChoiSlattery/boolean-mutual-information"

# Uncomment the next two lines if using anything from my personal PyPI and
# replace the uv requirements generation with `uv pip compile requirements.in
# --generate-hashes > requirements.txt`. 
# [tool.uv] extra-index-url =
# ["https://kchoislattery.github.io/PyPI/"]